--- a/twitter/package.json
+++ b/twitter/package.json
@@ -38,5 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server.js",
+  "devDependencies": {},
+  "keywords": [
+    "twitterApp"
+  ],
+  "author": "Johnny Briones Jr.",
+  "license": "ISC"
 }
